--- a/index.html
+++ b/index.html
@@ -5,14 +5,28 @@
         <meta name="description" content="Examen para corregir">
         <meta charset='UTF-8'/>
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <link rel='stylesheet' type="text/css" media='screen and (min-width: 720px)' href='1.css'>
-        <link rel='stylesheet' type="text/css" media='screen and (max-width: 719px)' href='2.css'>
+		<meta property="og:site_name" content="El examen definitivo de la UFBm">
+		<meta property="og:url" content="https://rawgit.com/Bernat77/Formulario-Marcas/master/index.html">
+		<meta property="og:title" content="Examen UFBm">
+		<meta property="og:image" content="img/logouni.png">
+		<meta property="og:description" content="¡Accede y realiza el examen definitivo de la universidad de Francesc Borja Moll!">
+        <link rel='stylesheet' type="text/css" media='screen and (min-width: 720px)' href='css/1.css'>
+        <link rel='stylesheet' type="text/css" media='screen and (max-width: 719px)' href='css/2.css'>
         <script src="js.js"></script>
     </head>
     <body>
-        <h1 id="encabezado"></h1>
-        <h3 id="inspc"></h3>
-        <h3 id="insmovil"></h3>
-        <a href="formulario.html"><img src="img/empezar.png" alt="boton examen"></a>
+        <h1 id="encabezado">Bienvenido al examen definitivo de la universidad Francesc Borja Moll.</h1>
+        <h3 id="inspc">El examen consta de 10 preguntas, cada pregunta acertada sumará un punto.<br>
+		Habrá indicaciones en todo momento en todas ellas, para las preguntas de selección múltiple, utliza la tecla "Ctrl" mantenida para seleccionar más de una opción.<br>
+		Una vez acabes hayas contestado todas las preguntas y acabado el examen, abajo del todo se encuentra el botón de correción. Una vez corregido aparecerá la opción de rehacer el examen si se desea.<br>
+		Ahora para acceder al examen, pulsa el botón de comenzar justo abajo.<br></h3>
+        <h3 id="insmovil">
+		El examen consta de 10 preguntas, cada pregunta acertada sumará un punto.<br>
+		Habrá indicaciones en todo momento en todas ellas, para las preguntas de selección múltiple, utliza la tecla "Ctrl" mantenida para seleccionar más de una opción.<br>
+		Una vez acabes hayas contestado todas las preguntas y acabado el examen, abajo del todo se encuentra el botón de correción. Una vez corregido aparecerá la opción de rehacer el examen si se desea.<br>
+        Ahora para acceder al examen, pulsa el botón de comenzar justo abajo.<br></h3>
+		<div id=emp>
+			<a href="formulario.html"><img src="img/empezar.png" alt="boton examen"></a>
+		</div>
     </body>
 </html>
