--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 		<meta property="og:site_name" content="El examen definitivo de la UFBm">
 		<meta property="og:url" content="https://rawgit.com/Bernat77/Formulario-Marcas/master/index.html">
 		<meta property="og:title" content="Examen UFBm">
-		<meta property="og:image" content="img/logouni.png">
+		<meta property="og:image" content="https://rawgit.com/Bernat77/Formulario-Marcas/master/img/logouni.png">
 		<meta property="og:description" content="¡Accede y realiza el examen definitivo de la universidad de Francesc Borja Moll!">
         <link rel='stylesheet' type="text/css" media='screen and (min-width: 720px)' href='css/1.css'>
         <link rel='stylesheet' type="text/css" media='screen and (max-width: 719px)' href='css/2.css'>
