--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
        	<meta name="author" content="Bernat Salleras">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<meta property="og:site_name" content="Universidad FBm">
-	<meta property="og:url" content="https://github.com/Bernat77/Formulario-Marcas/blob/master/index.html">
+	<meta property="og:url" content="https://rawgit.com/Bernat77/Formulario-Marcas/master/index.html">
 	<meta property="og:title" content="Universidad de Francesc Borja Moll">
 	<meta property="og:image" content="https://rawgit.com/Bernat77/Formulario-Marcas/master/img/logouni.png">
 	<meta property="og:description" content="Index del examen definitivo">
