--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 	<meta property="og:url" content="https://rawgit.com/Bernat77/Formulario-Marcas/master/index.html">
 	<meta property="og:title" content="Universidad de Francesc Borja Moll">
 	<meta property="og:image" content="https://rawgit.com/Bernat77/Formulario-Marcas/master/img/logouni.png">
-	<meta property="og:description" content="Index del examen definitivo">
+	<meta property="og:description" content="Index de la página del examen definitivo">
         <link rel='stylesheet' type="text/css" media='screen and (min-width: 720px)' href='css/1.css'>
         <link rel='stylesheet' type="text/css" media='screen and (max-width: 719px)' href='css/2.css'>
         <script src="js.js"></script>
