--- a/formulario.html
+++ b/formulario.html
@@ -3,13 +3,14 @@
 <head>
     <title>Examen UFBm</title>
     <meta name="description" content="Examen para corregir de UFBm">
-    <meta charset='UTF-8' />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta property="og:site_name" content="El examen definitivo de la UFBm">
-    <meta property="og:url" content="https://rawgit.com/Bernat77/Formulario-Marcas/master/index.html">
-    <meta property="og:title" content="Examen UFBm">
-    <meta property="og:image" content="img/logouni.png">
-    <meta property="og:description" content="¡Accede y realiza el examen definitivo de la universidad de Francesc Borja Moll!">
+       <meta charset='UTF-8'>
+   	<meta name="author" content="Bernat Salleras">
+	<meta name="viewport" content="width=device-width, initial-scale=1.0">
+	<meta property="og:site_name" content="Universidad FBm">
+	<meta property="og:url" content="https://rawgit.com/Bernat77/Formulario-Marcas/master/formulario.html">
+	<meta property="og:title" content="Universidad de Francesc Borja Moll">
+	<meta property="og:image" content="https://rawgit.com/Bernat77/Formulario-Marcas/master/img/logouni.png">
+    <meta property="og:description" content="EL examen definitivo">
     <link rel='stylesheet' type="text/css" media='screen and (min-width: 720px)' href='css/1.css'>
     <link rel='stylesheet' type="text/css" media='screen and (max-width: 719px)' href='css/2.css'>
     <script src="js/js.js"></script>
