--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
 		Ahora para acceder al examen, pulsa el botón de comenzar justo abajo.<br></h3>
         <h3 id="insmovil">
 		El examen consta de 10 preguntas, cada pregunta acertada sumará un punto.<br>
-		Habrá indicaciones en todo momento en todas ellas, para las preguntas de selección múltiple, utliza la tecla "Ctrl" mantenida para seleccionar más de una opción.<br>
+		Habrá indicaciones en todo momento en todas ellas, al estar en un dispositivo móvil, saldrán ventanas adicionales para las preguntas de selección.<br>
 		Una vez acabes hayas contestado todas las preguntas y acabado el examen, abajo del todo se encuentra el botón de correción. Una vez corregido aparecerá la opción de rehacer el examen si se desea.<br>
         Ahora para acceder al examen, pulsa el botón de comenzar justo abajo.<br></h3>
 		<div id=emp>
