--- a/index.html
+++ b/index.html
@@ -1,32 +1,1 @@
-<!DOCTYPE html>
-<html>
-    <head>
-        <title>Examen</title>
-        <meta name="description" content="Examen para corregir">
-        <meta charset='UTF-8'>
-       	<meta name="author" content="Bernat Salleras">
-	<meta name="viewport" content="width=device-width, initial-scale=1.0">
-	<meta property="og:site_name" content="Universidad FBm">
-	<meta property="og:url" content="https://rawgit.com/Bernat77/Formulario-Marcas/master/index.html">
-	<meta property="og:title" content="Universidad de Francesc Borja Moll">
-	<meta property="og:image" content="https://rawgit.com/Bernat77/Formulario-Marcas/master/img/logouni.png">
-	<meta property="og:description" content="Index de la página del examen definitivo">
-        <link rel='stylesheet' type="text/css" media='screen and (min-width: 900px)' href='css/1.css'>
-        <link rel='stylesheet' type="text/css" media='screen and (max-width: 899px)' href='css/2.css'>
-    </head>
-    <body>
-        <h1 id="encabezado">Bienvenido al examen definitivo de la universidad Francesc Borja Moll.</h1>
-        <h3 id="inspc">El examen consta de 10 preguntas, cada pregunta acertada sumará un punto.<br>
-		Habrá indicaciones en todo momento en todas ellas, para las preguntas de selección múltiple, utliza la tecla "Ctrl" mantenida para seleccionar más de una opción.<br>
-		Una vez acabes hayas contestado todas las preguntas y acabado el examen, abajo del todo se encuentra el botón de correción. Una vez corregido aparecerá la opción de rehacer el examen si se desea.<br>
-		Ahora para acceder al examen, pulsa el botón de comenzar justo abajo.<br></h3>
-        <h3 id="insmovil">
-		El examen consta de 10 preguntas, cada pregunta acertada sumará un punto.<br>
-		Habrá indicaciones en todo momento en todas ellas, al estar en un dispositivo móvil, saldrán ventanas adicionales para las preguntas de selección.<br>
-		Una vez acabes hayas contestado todas las preguntas y acabado el examen, abajo del todo se encuentra el botón de correción. Una vez corregido aparecerá la opción de rehacer el examen si se desea.<br>
-        Ahora para acceder al examen, pulsa el botón de comenzar justo abajo.<br></h3>
-		<div id=emp>
-			<a href="formulario.html"><img src="img/empezar.png" alt="boton examen"></a>
-		</div>
-    </body>
-</html>
+<!DOCTYPE html><html> <head> <title>Examen</title> <meta name="description" content="Examen para corregir"> <meta charset='UTF-8'> <meta name="author" content="Bernat Salleras"><meta name="viewport" content="width=device-width, initial-scale=1.0"><meta property="og:site_name" content="Universidad FBm"><meta property="og:url" content="https://rawgit.com/Bernat77/Formulario-Marcas/master/index.html"><meta property="og:title" content="Universidad de Francesc Borja Moll"><meta property="og:image" content="https://rawgit.com/Bernat77/Formulario-Marcas/master/img/logouni.png"><meta property="og:description" content="Index de la página del examen definitivo"> <link rel='stylesheet' type="text/css" media='screen and (min-width: 900px)' href='css/1.css'> <link rel='stylesheet' type="text/css" media='screen and (max-width: 899px)' href='css/2.css'> </head> <body> <h1 id="encabezado">Bienvenido al examen definitivo de la universidad Francesc Borja Moll.</h1> <h3 id="inspc">El examen consta de 10 preguntas, cada pregunta acertada sumará un punto.<br>Habrá indicaciones en todo momento en todas ellas, para las preguntas de selección múltiple, utliza la tecla "Ctrl" mantenida para seleccionar más de una opción.<br>Una vez acabes hayas contestado todas las preguntas y acabado el examen, abajo del todo se encuentra el botón de correción. Una vez corregido aparecerá la opción de rehacer el examen si se desea.<br>Ahora para acceder al examen, pulsa el botón de comenzar justo abajo.<br></h3> <h3 id="insmovil">El examen consta de 10 preguntas, cada pregunta acertada sumará un punto.<br>Habrá indicaciones en todo momento en todas ellas, al estar en un dispositivo móvil, saldrán ventanas adicionales para las preguntas de selección.<br>Una vez acabes hayas contestado todas las preguntas y acabado el examen, abajo del todo se encuentra el botón de correción. Una vez corregido aparecerá la opción de rehacer el examen si se desea.<br>Ahora para acceder al examen, pulsa el botón de comenzar justo abajo.<br></h3><div id=emp><a href="formulario.html"><img src="img/empezar.png" alt="boton examen"></a></div></body></html>
