--- a/index.html
+++ b/index.html
@@ -16,15 +16,15 @@
     </head>
     <body>
         <h1 id="encabezado">Bienvenido al examen definitivo de la universidad Francesc Borja Moll.</h1>
-        <h3 id="inspc">El examen consta de 10 preguntas, cada pregunta acertada sumará un punto.<br>
-		Habrá indicaciones en todo momento en todas ellas, para las preguntas de selección múltiple, utliza la tecla "Ctrl" mantenida para seleccionar más de una opción.<br>
-		Una vez acabes hayas contestado todas las preguntas y acabado el examen, abajo del todo se encuentra el botón de correción. Una vez corregido aparecerá la opción de rehacer el examen si se desea.<br>
+        <h3 id="inspc">El examen consta de 10 preguntas y por cada acertada se sumará un punto.<br>
+		Habrá indicaciones en todo momento en todas ellas, pero para las preguntas de selección múltiple, utliza la tecla "Ctrl" mantenida para seleccionar más de una opción.<br>
+		Una vez hayas contestado todas las preguntas y acabado el examen, abajo del todo se encuentra el botón de correción. Cuando se haya corregido el examen aparecerá la opción de rehacerlo si se desea.<br>
 		Ahora para acceder al examen, pulsa el botón de comenzar justo abajo.<br></h3>
         <h3 id="insmovil">
-		El examen consta de 10 preguntas, cada pregunta acertada sumará un punto.<br>
+		El examen consta de 10 preguntas y por cada acertada se sumará un punto.<br>
 		Habrá indicaciones en todo momento en todas ellas, al estar en un dispositivo móvil, saldrán ventanas adicionales para las preguntas de selección.<br>
-		Una vez acabes hayas contestado todas las preguntas y acabado el examen, abajo del todo se encuentra el botón de correción. Una vez corregido aparecerá la opción de rehacer el examen si se desea.<br>
-        Ahora para acceder al examen, pulsa el botón de comenzar justo abajo.<br></h3>
+		Una vez hayas contestado todas las preguntas y acabado el examen, abajo del todo se encuentra el botón de correción. uando se haya corregido el examen aparecerá la opción de rehacerlo si se desea<br>
+        Ahora para acceder al examen, pulsa el siguiente botón.<br></h3>
 		<div id=emp>
 			<a href="formulario.html"><img src="img/empezar.png" alt="boton examen"></a>
 		</div>
