--- a/index.html
+++ b/index.html
@@ -3,14 +3,14 @@
     <head>
         <title>Examen</title>
         <meta name="description" content="Examen para corregir">
-        <meta charset='UTF-8'>
-       	<meta name="author" content="Bernat Salleras">
+	<meta charset='UTF-8'>
+   	<meta name="author" content="Bernat Salleras">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<meta property="og:site_name" content="Universidad FBm">
 	<meta property="og:url" content="https://rawgit.com/Bernat77/Formulario-Marcas/master/index.html">
 	<meta property="og:title" content="Universidad de Francesc Borja Moll">
 	<meta property="og:image" content="https://rawgit.com/Bernat77/Formulario-Marcas/master/img/logouni.png">
-	<meta property="og:description" content="Index de la página del examen definitivo">
+	<meta property="og:description" content="EL examen definitivo">
         <link rel='stylesheet' type="text/css" media='screen and (min-width: 900px)' href='css/1.css'>
         <link rel='stylesheet' type="text/css" media='screen and (max-width: 899px)' href='css/2.css'>
     </head>
